# cashratebot

./: .dockerignore  .gitignore  1.csv  Dockerfile  README.md  bb_api.py  bot_logic.py  core_logic.py  data_formatter.py  db_manager.py  docker-compose.yml  handlers.py  main.py  models.py  prompts.py  pyproject.toml  rbc_parser.py  redis_client.py  requirements.txt
tests/: test_db_manager.py
