[project]
name = "proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "bybit-p2p>=1.1.0",
    "lxml>=5.3.2",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pycryptodome>=3.22.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "pytz>=2025.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "stubs>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
